result.css
@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@500;700;900&family=Hanken+Grotesk:wght@500;700;800&family=Open+Sans:wght@400;700&display=swap");

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
  min-height: 100vh;
  background: #ecf2ff;
}

.result_box {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  background: white;
}

.blue_box {
  height: 356px;
  width: 100%;
  background: linear-gradient(180deg, #7755ff 0%, #6943ff 0.01%, #2f2ce9 100%);
  box-shadow: 0px 30px 60px rgb(61 108 236 / 15%);
  border-radius: 0px 0px 32px 32px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.h2 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 23px;
  text-align: center;
  color: #cac9ff;
  padding-top: 24px;
  width: 94px;
  height: 23px;
}

.oval {
  background: linear-gradient(
    180deg,
    #4d21c9 0%,
    rgba(37, 33, 201, 0) 100%,
    rgba(37, 33, 201, 0) 100%
  );
  width: 140px;
  height: 140px;
  margin-top: 24px;
  border-radius: 50%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.oval_text1 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 800;
  font-size: 56px;
  line-height: 72px;
  text-align: center;
  color: #ffffff;
  margin-top: 25px;
}

.oval_text2 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 16px;
  line-height: 21px;
  color: #cac9ff;
  mix-blend-mode: normal;
  opacity: 0.52;
}

h1 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  line-height: 31px;
  text-align: center;
  color: #ffffff;
  margin-top: 24px;
}

.p1 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 21px;
  text-align: center;
  color: #cac9ff;
  width: 260px;
  margin-top: 8px;
}

.second_box {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  width: 100%;
  padding-left: 30px;
  padding-right: 30px;
  box-sizing: border-box;
  padding-bottom: 30px;
  padding-top: 24px;
}

.h2_summary {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 23px;
  color: #303b59;
}

.boxes {
  display: flex;
  flex-direction: column;
  gap: 16px;
  margin-top: 24px;
}

.box {
  border-radius: 12px;
  width: 100%;
  height: 56px;
  padding-left: 16px;
  padding-right: 16px;
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.box1 {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.95),
      rgba(255, 255, 255, 0.95)
    ),
    #ff5555;
}

.box2 {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.95),
      rgba(255, 255, 255, 0.95)
    ),
    #ffb21e;
}

.box3 {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.95),
      rgba(255, 255, 255, 0.95)
    ),
    #00bb8f;
}

.box4 {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.95),
      rgba(255, 255, 255, 0.95)
    ),
    #1125d6;
}

.box_text {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 16px;
  line-height: 21px;
  text-align: right;
  color: #303b59;
}

.opacity {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 16px;
  line-height: 21px;
  text-align: right;
  color: #303b59;
  opacity: 0.5;
}

.logo_group {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 12px;
}

.logo_text1 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 21px;
  color: #ff5555;
}

.logo_text2 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 21px;
  color: #ffb21e;
}

.logo_text3 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 21px;
  color: #00bb8f;
}

.logo_text4 {
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 21px;
  color: #1125d6;
}

.footer {
  background: #303b59;
  border-radius: 128px;
  font-family: "Hanken Grotesk";
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 23px;
  color: #ffffff;
  height: 56px;
  display: flex;
  justify-content: center;
  align-items: center;
  border: none;
  margin-top: 24px;
  cursor: pointer;
}

.footer:hover {
  background: linear-gradient(180deg, #7755ff 0%, #6943ff 0.01%, #2f2ce9 100%);
  border-radius: 128px;
  transition: ease 0.2s;
}

@media screen and (min-width: 1440px) {
  body {
    justify-content: center;
  }

  .result_box {
    width: 736px;
    align-items: center;
    display: flex;
    flex-direction: row;
    background: #ffffff;
    box-shadow: 0px 30px 60px rgb(61 108 236 / 15%);
    border-radius: 32px;
  }

  .blue_box {
    border-radius: 32px;
    height: 512px;
    width: 368px;
  }

  .second_box {
    height: 512px;
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    width: 368px;
    padding-left: 40px;
    padding-right: 40px;
    box-sizing: border-box;
    padding-bottom: 46px;
    padding-top: 38px;
  }

  .h2 {
    font-family: "Hanken Grotesk";
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 31px;
    color: #cac9ff;
    width: 125px;
    padding-top: 38px;
    height: 31px;
  }

  .oval {
    width: 200px;
    height: 200px;
    margin-top: 35px;
  }

  .oval_text1 {
    font-family: "Hanken Grotesk";
    font-style: normal;
    font-weight: 800;
    font-size: 72px;
    line-height: 72px;
    text-align: center;
    color: #ffffff;
    margin-top: 55px;
  }

  .oval_text2 {
    font-family: "Hanken Grotesk";
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 23px;
    color: #cac9ff;
    mix-blend-mode: normal;
    opacity: 0.52;
    margin-top: 4px;
  }

  h1 {
    font-family: "Hanken Grotesk";
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    line-height: 42px;
    text-align: center;
    color: #ffffff;
    margin-top: 28px;
  }

  .p1 {
    font-family: "Hanken Grotesk";
    font-style: normal;
    font-weight: 500;
    font-size: 18px;
    line-height: 23px;
    text-align: center;
    color: #cac9ff;
    width: 260px;
    margin-top: 14px;
  }

  .h2_summary {
    font-family: "Hanken Grotesk";
    font-style: normal;
    font-weight: 700;
    font-size: 24px;
    line-height: 31px;
    color: #303b59;
  }

  .boxes {
    display: flex;
    flex-direction: column;
    gap: 16px;
    margin-top: 28px;
  }

  .footer {
    margin-top: 41px;
  }
}

